--- a/Train_plant_disease-checkpoint-checkpoint.ipynb
+++ b/Train_plant_disease-checkpoint-checkpoint.ipynb
@@ -381,39 +381,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "65ffd9dd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1576s\u001b[0m 714ms/step - accuracy: 0.3870 - loss: 2.1616 - val_accuracy: 0.8504 - val_loss: 0.4835\n",
-      "Epoch 2/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3515s\u001b[0m 2s/step - accuracy: 0.8360 - loss: 0.5233 - val_accuracy: 0.9100 - val_loss: 0.2758\n",
-      "Epoch 3/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1258s\u001b[0m 572ms/step - accuracy: 0.9054 - loss: 0.2930 - val_accuracy: 0.9162 - val_loss: 0.2617\n",
-      "Epoch 4/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1245s\u001b[0m 567ms/step - accuracy: 0.9370 - loss: 0.1939 - val_accuracy: 0.9361 - val_loss: 0.2042\n",
-      "Epoch 5/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1252s\u001b[0m 570ms/step - accuracy: 0.9530 - loss: 0.1458 - val_accuracy: 0.9430 - val_loss: 0.1818\n",
-      "Epoch 6/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15473s\u001b[0m 7s/step - accuracy: 0.9625 - loss: 0.1128 - val_accuracy: 0.9492 - val_loss: 0.1811\n",
-      "Epoch 7/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5417s\u001b[0m 2s/step - accuracy: 0.9677 - loss: 0.0994 - val_accuracy: 0.9586 - val_loss: 0.1432\n",
-      "Epoch 8/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1333s\u001b[0m 607ms/step - accuracy: 0.9736 - loss: 0.0791 - val_accuracy: 0.9478 - val_loss: 0.1875\n",
-      "Epoch 9/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1529s\u001b[0m 696ms/step - accuracy: 0.9793 - loss: 0.0636 - val_accuracy: 0.9505 - val_loss: 0.1662\n",
-      "Epoch 10/10\n",
-      "\u001b[1m2197/2197\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1541s\u001b[0m 701ms/step - accuracy: 0.9812 - loss: 0.0589 - val_accuracy: 0.9656 - val_loss: 0.1210\n"
+     "ename": "NameError",
+     "evalue": "name 'cnn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m training_history \u001b[38;5;241m=\u001b[39m \u001b[43mcnn\u001b[49m\u001b[38;5;241m.\u001b[39mfit(x\u001b[38;5;241m=\u001b[39mtraining_set,validation_data\u001b[38;5;241m=\u001b[39mvalidation_set,epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cnn' is not defined"
      ]
     }
    ],
    "source": [
-    "training_history = cnn.fit(x=training_set,validation_data=validation_set,epochs=10)"
+    "training_history = cnn.fit(x=training_set,validation_data=validation_set,epochs=2)"
    ]
   },
   {
@@ -826,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
